--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.9"
 
 services:
   web:
-    build: ./app
+    build: ./
     user: "node:node"
     environment:
       - APP_PORT=${APP_PORT:-3000}
